# git-code-ai-analyzer

./: README.md  pyproject.toml  requirements.txt
git_code_ai_analyzer/: ai_client.py  code_analyzer.py  git_branch_analyzer.py
tests/: qwen_analyzer.py
